--- a/quiz/src/css/Question.css
+++ b/quiz/src/css/Question.css
@@ -13,7 +13,8 @@
 .title {
     font-size: 20px;
     margin-top: 0px;
-    background-color: royalblue;
+    background-color: black;
+    color: white;
     padding: 20px;
 }
 
