--- a/quiz/src/css/Quiz.css
+++ b/quiz/src/css/Quiz.css
@@ -5,6 +5,24 @@
     height: 600px;
 }
 
+.quizzes {
+    display: flex;
+}
+
+.quizzes div {
+    background-color: #7FB800;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    width: 200px;
+    height: 140px;
+
+    margin: 20px;
+    border-radius: 20px;
+}
+
 .quiz {
     display: flex;
     justify-content: center;
