--- a/quiz/src/css/Question.css
+++ b/quiz/src/css/Question.css
@@ -1,8 +1,16 @@
+.question-container {
+    margin-top: 100px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* background-color: #E9FFF9; */
+}
+
 .question {
     width: 400px;
-    margin-left: 10px;
-    margin-top: 10px;
-    border: 3px solid black;
+    margin-left: 1px;
+    margin-top: 30px;
+    border: 2px solid black;
 }
 
 .options :hover{
