--- a/quiz/src/css/Quiz.css
+++ b/quiz/src/css/Quiz.css
@@ -8,6 +8,7 @@
 
 .quiz-list div {
     background-color: #04A777;
+    background-color: #046865;
 
     display: flex;
     justify-content: center;
