--- a/quiz/src/css/App.css
+++ b/quiz/src/css/App.css
@@ -1,6 +1,7 @@
 * {
     font-family: Arial, Helvetica, sans-serif;
     margin: 0px;
+    font-size: 20px;
 }
 
 ::-webkit-scrollbar {
@@ -14,4 +15,8 @@
 
 ::-webkit-scrollbar-track {
     background-color: black;
+}
+
+:hover button {
+    cursor: pointer;
 }
