--- a/quiz/src/css/Quiz.css
+++ b/quiz/src/css/Quiz.css
@@ -1,4 +1,5 @@
 .quiz-list {
+    background-image: none;
     background-color: #E9FFF9;
     margin-top: 90px;
     font-size: 20px;
@@ -35,4 +36,21 @@
     margin: 100px 20px;
     font-size: 30px;
     border-radius: 15px;
+}
+
+.quiz-title {
+    font-size: 40px;
+    padding: 20px;
+}
+
+.add-question-input {
+    padding: 16px;
+    margin: 10px;
+    border-radius: 10px;
+}
+
+.add-question-submit {
+    padding: 16px;
+    margin: 10px;
+    border-radius: 10px;
 }
