--- a/quiz/src/css/Question.css
+++ b/quiz/src/css/Question.css
@@ -1,16 +1,33 @@
-.question-container {
-    margin-top: 100px;
+.quiz-container {
+    background-color: #04A777;
+    margin-top: 89px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    /* background-color: #E9FFF9; */
+}
+
+.question-container {
+    border: 3px solid black;
+    margin: 10px;
+}
+
+.quiz-title {
+    color: white;
 }
 
 .question {
-    width: 400px;
-    margin-left: 1px;
-    margin-top: 30px;
-    border: 2px solid black;
+    background-color: black;
+    color: white;
+    padding: 20px;
+    width: 500px;
+}
+
+.options {
+    background-color: white;
+    color: black;
+    /* border: 2px solid black; */
+    padding: 8px;
+    width: 520px;
 }
 
 .options :hover{
@@ -18,20 +35,32 @@
     background-color: #EEEEEE;
 }
 
-.title {
-    font-size: 20px;
-    margin-top: 0px;
-    background-color: black;
-    color: white;
-    padding: 20px;
-}
-
-.title :hover{
-    background-color: black;
-}
-
 .option {
     margin-top: 0px;
     padding: 10px;
     font-size: 16px;
+}
+
+.add-question-form {
+    background-color: #046865;
+
+    border-radius: 20px;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 10px;
+}
+
+.add-question-form input {
+    padding: 8px;
+    border-radius: 10px;
+    margin: 2px;
+    width: 200px;
+}
+
+.add-question-form .add-question-input {
+    width: 250px;
+    height: 50px;
+    margin: 15px;
 }
