--- a/quiz/src/css/Quiz.css
+++ b/quiz/src/css/Quiz.css
@@ -1,3 +1,10 @@
+.quiz-container {
+    margin-top: 89px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .quiz-list {
     background-image: none;
     background-color: #E9FFF9;
@@ -26,7 +33,6 @@
     justify-content: center;
     align-items: center;
 
-    background-color: #007FFF;
     color: white;
 
     height: 140px;
