--- a/quiz/src/css/AddQuestion.css
+++ b/quiz/src/css/AddQuestion.css
@@ -10,6 +10,18 @@
     /* margin: 10px; */
 }
 
+.add-image {
+    background-color: royalblue;
+}
+
+.image-output {
+    background-color: royalblue;
+    color: white;
+    padding: 10px;
+    margin: 10px;
+    border-radius: 10px;
+}
+
 .form-option {
     display: flex;
 }
