--- a/quiz/src/css/Question.css
+++ b/quiz/src/css/Question.css
@@ -1,11 +1,27 @@
-
-
 .question-container {
     border: 3px solid black;
+    margin: 12px;
+    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+img .question-container {
+    text-align: center;
+    background-color: black;
+}
+
+.question-image {
+    width: 500px;
+    height: 500px;
     margin: 10px;
 }
 
 .quiz-title {
+    background-color: #04A777;
+    width: 97.4%;
+    text-align: center;
     color: black;
 }
 
@@ -13,18 +29,5 @@
     background-color: black;
     color: white;
     padding: 20px;
-    width: 500px;
-}
-
-.options {
-    background-color: white;
-    color: black;
-    /* border: 2px solid black; */
-    padding: 8px;
-    width: 520px;
-}
-
-.options :hover{
-    cursor: pointer;
-    background-color: #EEEEEE;
+    width: 510px;
 }
