--- a/quiz/src/css/Register.css
+++ b/quiz/src/css/Register.css
@@ -1,16 +1,27 @@
 .register-container {
-    height: 500px;
+    height: 800px;
     color: black;
     text-align: center;
-    margin-top: 200px;
+    margin-top: 100px;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
+.form-container {
+    display: flex;
+    flex-direction: column;
+}
+
 input {
     padding: 15px;
     border-radius: 5px;
+    margin: 10px;
+}
+
+select {
+    margin: 10px;
+    padding: 10px;
 }
 
 .tag-container {
@@ -18,6 +29,7 @@ input {
     padding: 15px;
     width: 30%;
     background-color: black;
+    border-radius: 10px;
 
     display: flex;
     flex-wrap: wrap;
@@ -25,8 +37,18 @@ input {
 }
 
 .tag {
-    margin: 4px;
-    padding: 8px;
+    margin: 7px;
+    padding: 10px;
     width: max-content;
     border-radius: 20px;
+}
+
+.tag:hover {
+    cursor: pointer;
+    /* transform: scale(1.16); */
+    opacity: 0.7;
+}
+
+.tag:active {
+    transform: scale(1.2);
 }
